--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,22 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+.login_form {
+  display: flex;
+  justify-content: center;
+  width: 25%;
+  flex-direction: column;
+  align-items: center;
+}
+
+h1.ant-typography {
+  display: flex;
+  color: deepskyblue;
+  justify-content: center;
 }
